<resources>
    <string name="app_name">Esbrani</string>
    <string name="carica">Carica</string>
    <string name="salva">Salva</string>
    <string name="inserisci_i_dati">Inserisci i dati!</string>
    <string name="durata">Durata</string>
    <string name="info">Info</string>
    <string name="visualizza">visualizza</string>
    <string name="data">Data</string>
    <string name="autore">Autore</string>
    <string name="titolo">Titolo</string>
    <string name="brani">brani</string>
</resources>